[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Shooting Enemy/CenteredFlyingWallEnemy.png" type="Texture" id=1]
[ext_resource path="res://Audio/Level_1_Sounds/prototyping_sounds/Plink-sounds-headshot-or-armor-break-20220331-163453.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Level_1_Scripts/shooter_flyer.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Level_1_Prefabs/Enemies/enemy_bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/EnemyShooterType/GunEffect/Enemy Gun Effect.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster5.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "flame",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 36.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 36.0

[node name="shooter_flyer_node" type="Node2D"]

[node name="shooter_flyer" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )
distance_from_origin = 100
move_speed = 150
bullet_scene = ExtResource( 4 )
min_shoot_time = 2.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="shooter_flyer"]
position = Vector2( 0, 40 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 3 )
animation = "flame"
frame = 7
playing = true

[node name="Sprite" type="Sprite" parent="shooter_flyer"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooter_flyer"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="death" type="Timer" parent="shooter_flyer"]

[node name="Area2D" type="Area2D" parent="shooter_flyer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooter_flyer/Area2D"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="death_sound" type="AudioStreamPlayer2D" parent="shooter_flyer"]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="idle_timer" type="Timer" parent="shooter_flyer"]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="shooter_flyer"]
position = Vector2( -3.8147e-06, -7.62939e-06 )
scale = Vector2( 19.3, 5.1 )

[node name="shoot_ready" type="Timer" parent="shooter_flyer"]
one_shot = true

[node name="shoot_sound" type="AudioStreamPlayer2D" parent="shooter_flyer"]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 0.9
attenuation = 3.86374

[connection signal="timeout" from="shooter_flyer/death" to="shooter_flyer" method="_on_death_timeout"]
[connection signal="body_entered" from="shooter_flyer/Area2D" to="shooter_flyer" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="shooter_flyer/idle_timer" to="shooter_flyer" method="_on_idle_timer_timeout"]
[connection signal="screen_entered" from="shooter_flyer/VisibilityNotifier2D" to="shooter_flyer" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="shooter_flyer/VisibilityNotifier2D" to="shooter_flyer" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="shooter_flyer/shoot_ready" to="shooter_flyer" method="_on_shoot_ready_timeout"]
